Separated debugging into own environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -14,9 +14,9 @@
 ; find our firmware in Proteus.
 build_dir = build
 
-[env:xplainedmini]
+[env]
+; common config for all environments
 platform = atmelavr
-board = ATmega328PB
 platform_packages =
     platformio/tool-simavr
 
@@ -76,3 +76,10 @@ upload_flags =
     -c
     xplainedmini
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+[env:debug]
+build_type = debug	; include symbolic debugging information
+board = ATmega328P
+
+[env:xplainedmini]
+board = ATmega328PB
