Force all compiler warnings

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,17 @@ platform = atmelavr
 platform_packages =
     platformio/tool-simavr
 
+; Select optimisation level and enable desired warnings (optional)
+; You should customise this to your preference
+build_flags =
+	; maximum optimisation (will get disabled in debug mode)
+	-O3
+	; all C warnings except -Wpedantic
+    -Wall -Wextra
+    -Wcomment -Wdouble-promotion -Wfloat-conversion -Wfloat-equal
+    -Wformat-nonliteral -Wformat-security -Wformat-signedness
+    -Wmissing-declarations -Wshadow -Wswitch-default
+
 ; The Xplained Mini boards you would have gotten from the ECE store have 2MHz
 ; clocks.
 board_build.f_cpu = 2000000UL
