--- a/platformio.ini
+++ b/platformio.ini
@@ -15,17 +15,19 @@
 build_dir = build
 
 [env]
-; common config for all environments
+; Common config for all environments
 platform = atmelavr
 platform_packages =
     platformio/tool-simavr
 
 ; Select optimisation level and enable desired warnings (optional)
 ; You should customise this to your preference
+;
+; By default the following settings are set:
+;  - Maximum optimisations (will be disabled in debug mode)
+;  - All C warnings except -Wpedantic
 build_flags =
-	; maximum optimisation (will get disabled in debug mode)
-	-O3
-	; all C warnings except -Wpedantic
+    -O3
     -Wall -Wextra
     -Wcomment -Wdouble-promotion -Wfloat-conversion -Wfloat-equal
     -Wformat-nonliteral -Wformat-security -Wformat-signedness
@@ -89,8 +91,10 @@ upload_flags =
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
 
 [env:debug]
-build_type = debug	; include symbolic debugging information
+; Include symbolic debugging information
+build_type = debug
 board = ATmega328P
 
 [env:xplainedmini]
 board = ATmega328PB
+
