--- a/platformio.ini
+++ b/platformio.ini
@@ -14,11 +14,24 @@
 ; find our firmware in Proteus.
 build_dir = build
 
-[env:xplainedmini]
+[env]
+; Common config for all environments
 platform = atmelavr
-board = ATmega328PB
 platform_packages =
     platformio/tool-simavr
+
+; Select optimisation level and enable desired warnings (optional)
+; You should customise this to your preference
+;
+; By default the following settings are set:
+;  - Maximum optimisations (will be disabled in debug mode)
+;  - All C warnings except -Wpedantic
+build_flags =
+    -O3
+    -Wall -Wextra
+    -Wcomment -Wdouble-promotion -Wfloat-conversion -Wfloat-equal
+    -Wformat-nonliteral -Wformat-security -Wformat-signedness
+    -Wmissing-declarations -Wshadow -Wswitch-default
 
 ; The Xplained Mini boards you would have gotten from the ECE store have 2MHz
 ; clocks.
@@ -76,3 +89,12 @@ upload_flags =
     -c
     xplainedmini
 upload_command = avrdude $UPLOAD_FLAGS -U flash:w:$SOURCE:i
+
+[env:debug]
+; Include symbolic debugging information
+build_type = debug
+board = ATmega328P
+
+[env:xplainedmini]
+board = ATmega328PB
+
